--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "^5.1.1",
     "starlight-heading-badges": "^0.4.0",
     "starlight-image-zoom": "^0.10.0",
+    "starlight-package-managers": "^0.8.1",
     "starlight-theme-catppuccin": "^2.0.0",
     "starlight-view-modes": "^0.7.0"
   }
